Fixed overflow for fading panos

--- a/modules/ext.vtour.virtualtour.css
+++ b/modules/ext.vtour.virtualtour.css
@@ -254,6 +254,10 @@
 	z-index: 50;
 }
 
+.vtour-fading * {
+	overflow: hidden;
+}
+
 .vtour-popupinfo > div {
 	overflow: hidden;
 }
